# ecomm-shipping-assistant

./: .gitignore  Dockerfile  README.md  ai_shopping_assistant_flow.md  docker-compose.yml  env.example  init.sql  logging.conf  pyproject.toml  requirements.txt  setup.sh
app/: main.py
app/ai/: entity_extractor.py  intent_classifier.py  recommendation_engine.py  response_generator.py
app/api/: chat.py  discounts.py  notifications.py  products.py
app/models/: conversation.py  discount.py  order.py  product.py  user.py
app/services/: chat_service.py  discount_service.py
app/utils/: cache.py  config.py  database.py
frontend_example/: index.html  styles.css
